# 2.11_Building_and_connecting_libs

./: readme.md
01/: readme.md
02/: readme.md
03/: readme.md
04/: readme.md
05/: readme.md
2.11.1_Static_lib_Greeter/: 2.11_Static_lib_Greeter.sln
2.11.1_Static_lib_Greeter/2.11_Static_lib_Greeter/: 2.11_Static_lib_Greeter.vcxproj  2.11_Static_lib_Greeter.vcxproj.filters  Greeter.cpp
2.11.1_Static_lib_Greeter/Greeter_Client/: Greeter_Client.vcxproj  Greeter_Client.vcxproj.filters
2.11.2_DLL_Greater/: 2.11.2_DLL_Greater.sln
2.11.2_DLL_Greater/2.11.2_DLL_Greater/: 2.11.2_DLL_Greater.vcxproj  Greeter_Client.cpp
2.11.2_DLL_Greater/DLL_Greater/: DLL_Greater.vcxproj  DLL_Greater.vcxproj.filters  Greeter.h
2.11.2_Static_lib_Greeter_CMake/: CMakeLists.txt  Greeter.h
2.11.3_DLL_Leaver_CMake/: CMakeLists.txt  Leaver.cpp  Leaver.h  Leaver_Client.cpp
2.11.4_Class hierarchy DLL/: 2.11.4_Class hierarchy DLL.sln
2.11.4_Class hierarchy DLL/2.11.4_Class hierarchy DLL/: 2.11.4_Class hierarchy DLL.vcxproj  2.11.4_Class hierarchy DLL.vcxproj.filters  DLL.h  Quadrilateral.cpp  Rectangle.h  (+3 more)
2.11.5_Class hierarchy DLL CMake/: CMakeLists.txt  Figure.h  Parallelogram.cpp  Parallelogram.h  Quadrilateral.h  Rombus.cpp  Rombus.h  Square.cpp  Square.h  Triangle.h  TriangleEquilateral.cpp  TriangleRight.cpp
2.11.5_Class hierarchy DLL CMake_var2/: CMakeLists.txt  Class hierarchy.cpp  Parallelogram.h  Quadrilateral.h  Rectangle.cpp  Rectangle.h  Rombus.h  Square.h  Triangle.cpp  Triangle.h  TriangleEquilateral.h  TriangleIsosceles.cpp  TriangleIsosceles.h  TriangleRight.h
(+2 files in other folders)
